--- a/webcam-part/package.json
+++ b/webcam-part/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@tensorflow-models/hand-pose-detection": "^0.0.1",
     "@tensorflow/tfjs-backend-wasm": "^3.9.0",
+    "express": "^4.17.2",
     "rimraf": "^3.0.2",
-    "scatter-gl": "^0.0.12"
+    "scatter-gl": "^0.0.12",
+    "socket.io": "^4.4.1"
   },
   "peerDependencies": {
     "@mediapipe/hands": "~0.4.0",
